<resources>
    <string name="app_name">Improve intuition</string>

    <!-- Text for Cards on Main Screen -->
    <string name="titleAbout">About Intuition</string>
    <string name="descriptionAbout">How improve your Sixth Sense - read more (&#8230;)</string>

    <string name="titleExerciseOne">Exercise one</string>
    <string name="titleExerciseTwo">Exercise two</string>
    <string name="titleExerciseThree">Exercise three</string>
    <string name="titleResults">Summing up</string>
    <string name="titleStatistic">Statistic</string>

    <string name="skillBegin">(do exercise</string>
    <string name="skillDays">days)</string>
    <string name="skillDay">day)</string>
    <string name="skill">Skill:</string>


    <string name="titleEnableStat">Enable Statistic</string>
    <string name="descriptionStat">Enable Statistic for each exercises.</string>
    <string name="descriptionStat2">Enable statistic of each exercises and turn off all advertising.</string>

    <!-- Text for Pause screen -->
    <string name="txtWait">Initialization</string>

    <!--Menu items-->
    <string name="menu_item_sound">Sound</string>
    <string name="menu_item_vibrate">Vibrate</string>

    <!-- Text for Exercise One -->
    <string name="textExOneHead">
        Listen to your Intuition\n\n
        Pick one of the two images
    </string>
    <string name="textExOneOr">or</string>

    <!-- Text for Exercise Two -->
    <string name="textExTwoHead">
        Listen to your Inner Voice\n
        Open four buttons -\n
        find mach more smileys
    </string>

    <!-- Text for Exercise Three -->
    <string name="textExThreeHead">
        What does your Intuition tell you?\n
        Choose one of five pictures
    </string>

    <!--Text for fragment of Statistics-->
    <string name="textStatisticTitle">
        Your skill of \"One from Two\"
    </string>
    <string name="textStatisticDate">feb, 2016</string>

    <!-- Text for Result Fragment -->
    <string name="textSummaryFirstEx">Exercise: \"One from Two\"</string>
    <string name="textSummarySecondEx">Exercise: \"Four from Nine\"</string>
    <string name="textSummaryThirdEx">Exercise: \"One from Five\"</string>
    <string name="textSummaryAchievement">Your achievement</string>

    <string name="textCorrectAnswers">Right answers among all</string>
    <string name="textBestResult">Your best result was</string>
    <string name="textYourSkill">Your accumulated skill</string>
    <string name="textYourSkillSub">(accumulated from the past seven days of training)</string>

    <string name="textSummaryBest">Best</string>
    <string name="textSummarySkill">Skill 0% \n (still \n 7 days)</string>
    <string name="textStill">(still</string>
    <string name="btnAgain">Once Again</string>
    <string name="btnMain">Main menu</string>

    <!-- Text for indicators (level and frequency) -->
    <string name="textIndicatorEasy">easy</string>
    <string name="textIndicatorNormal">normal</string>
    <string name="textIndicatorHard">hard</string>

    <string name="textIndicatorNever">never</string>
    <string name="textIndicatorToday">today</string>
    <string name="textIndicatorYesterday">yesterday</string>
    <string name="textIndicatorDaysEgo">days ego</string>
    <string name="textIndicatorLongTime">long time</string>
    <string name="textIndicatorStore">store</string>
    <string name="textIndicatorAbout">help</string>


</resources>
