<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Roman Turas:
         Be sure, used cardView:cardUseCompatPadding="true" !!!
         If not use - cardElevation & translation will NOT worked !!!!      -->

    <android.support.v7.widget.CardView
        xmlns:cardView="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardSummary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginTop="0dp"
        cardView:cardUseCompatPadding="true"
        cardView:cardElevation="5dp"
        cardView:cardBackgroundColor="@color/colorBackgroundSummary"
        cardView:cardCornerRadius="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="7dp"
                android:paddingBottom="5dp">

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:textColor="#000000"
                    android:text="@string/textSummaryFirstEx"
                    android:id="@+id/textSummaryHead"
                    android:gravity="center_horizontal" />

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="0dp"
                    android:textColor="#000000"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:text="@string/textSummaryAchievement"
                    android:id="@+id/textSummaryYourAnswers"
                    android:gravity="center_horizontal" />

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:text="@string/textCorrectAnswers"
                    android:id="@+id/textCorrectAnswers"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <FrameLayout
                        android:id="@+id/frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ProgressBar
                            android:id="@+id/progressSummaryTotal"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circle_progress"
                            android:background="@drawable/circle_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="68" />

                        <ua.com.spasetv.testintuitions.tools.ExTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:longClickable="false"
                            android:text="17/25"
                            android:id="@+id/textProgressSummaryTotal"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:textSize="10sp" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/frame1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ProgressBar
                            android:id="@+id/progressSummaryPercent"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circle_progress"
                            android:background="@drawable/circle_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="51" />

                        <ua.com.spasetv.testintuitions.tools.ExTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:longClickable="false"
                            android:text="51%"
                            android:id="@+id/textProgressSummaryPercent"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:textSize="10sp" />
                    </FrameLayout>

                </LinearLayout>

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:text="@string/textBestResult"
                    android:id="@+id/textBestResult"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/frame3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ProgressBar
                            android:id="@+id/progressSummaryBest"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circle_progress"
                            android:background="@drawable/circle_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="59"
                            android:layout_gravity="center" />

                        <ua.com.spasetv.testintuitions.tools.ExTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:longClickable="false"
                            android:text="@string/textSummaryBest"
                            android:id="@+id/textProgressSummaryBest"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:textSize="8sp" />
                    </FrameLayout>
                </LinearLayout>

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:text="@string/textYourSkill"
                    android:id="@+id/textYourSkill"
                    android:gravity="center_horizontal" />

                <ua.com.spasetv.testintuitions.tools.ExTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="0dp"
                    android:textColor="#000000"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"
                    android:text="@string/textYourSkillSub"
                    android:id="@+id/textYourSkillSub"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/frame4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ProgressBar
                            android:id="@+id/progressSummarySkill"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circle_progress"
                            android:background="@drawable/circle_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="0"
                            android:layout_gravity="center" />

                        <ua.com.spasetv.testintuitions.tools.ExTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:longClickable="false"
                            android:text="@string/textSummarySkill"
                            android:id="@+id/textProgressSummarySkill"
                            android:textSize="8sp"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp">

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>